Update .tmux.conf, remove contrib-prompt module from zprezto

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,27 +1,95 @@
-# remap prefix from 'C-b' to 'C-a'
+# remap prefix to Control + a
+set -g prefix C-a
 unbind C-b
-set-option -g prefix C-a
-bind-key C-a send-prefix
+bind C-a send-prefix
 
-# split panes using | and -
-bind | split-window -h
-bind - split-window -v
-unbind '"'
-unbind %
+#  reload of the config file
+unbind r
+bind r source-file ~/.tmux.conf
 
-# Enable mouse control (clickable windows, panes, resizable panes)
-set -g mouse on
-
-# Navigate to next pane
+# quick pane cycling
 unbind ^A
 bind ^A select-pane -t :.+
-
-# Prevent automatic renaming of windows
-set-option -g allow-rename off
+bind h select-pane -L
+bind j select-pane -D
+bind k select-pane -U
+bind l select-pane -R
 
 # Start windows and panes at 1, not 0
 set -g base-index 1
 setw -g pane-base-index 1
 
-# reload
-bind r source-file ~/.tmux.conf
+set-option -g mouse on
+
+## BEGIN THEME ##
+
+# Colors
+BACKGROUND=black
+FOREGROUND=white
+HIGHLIGHT="#3fcfff"
+ACTIVITY="#a0d0f0"
+
+# Title
+set -g set-titles on
+set -g set-titles-string '#(whoami)@#H - (#S:#W.#P)'
+
+# Panes
+set -g pane-border-fg default
+set -g pane-active-border-bg default
+set -g pane-active-border-fg $HIGHLIGHT
+
+set -g display-panes-time 1000
+set -g display-panes-colour $FOREGROUND
+set -g display-panes-active-colour $HIGHLIGHT
+
+# Clock
+set -g clock-mode-colour $FOREGROUND
+set -g clock-mode-style 24
+
+# Mode
+set -g mode-bg $HIGHLIGHT
+set -g mode-fg $BACKGROUND
+
+# Windows
+
+setw -g window-status-format " #I:#W"
+setw -g window-status-bg default
+setw -g window-status-fg $FOREGROUND
+setw -g window-status-attr dim
+
+setw -g window-status-last-style fg=$FOREGROUND,bold
+
+setw -g window-status-current-format " #I:#W"
+setw -g window-status-current-bg default
+setw -g window-status-current-fg $HIGHLIGHT
+setw -g window-status-current-attr bold
+
+setw -g window-status-activity-bg $BACKGROUND
+setw -g window-status-activity-fg $ACTIVITY
+setw -g window-status-activity-attr dim
+
+## Cannot use:
+##  - screen-bce, screen-256color-bce: tmux does not support bce
+##  - screen-256color: vim broken without -bce
+set -g default-terminal "screen-256color"
+
+# Status Top
+set -g status-position bottom
+
+# Status Colors
+set -g status-bg $BACKGROUND
+set -g status-fg $FOREGROUND
+
+# Status Interval
+# But there is a strange bug that freezes osx
+# https://github.com/tmux/tmux/issues/108
+# set to 0
+set -g status-interval 0
+
+# Message
+set -g message-bg $BACKGROUND
+set -g message-fg $HIGHLIGHT
+set -g message-attr bright
+
+# vim: set syntax=tmux:
+set-option -sg escape-time 10
